added an important comment to the file...

--- a/Images.html
+++ b/Images.html
@@ -12,5 +12,6 @@
   <br>
   <p>here's a pic of my brother without his consent</p>
   <img src ="https://ssbworld.com/images/avatars/psimetronome/psimetronome.jpg">
-  </body>
+      <h1>LAME</h1>
+</body>
   </html>
