--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <<!DOCTYPE html>
 <html>
 <body>
-  <h1> Welcome to our site!</h1>
+  <a href="AboutUs.html">About Us</a>
+  <a href="Contacts.html">Contact</a>
+  <a href="Graphs.html">Graphs based on nothing</a>
+  <a href="hello.html">Hello</a>
+  <a href="help.html">Help</a>
+  <a href="Images.html">Important Images</a>
+  <a href="OW.html">Mathieu did something here</a>
+  <a href="pics.html">More Pictures</a>
+  <a href="sales.html">Sales?</a>
+  <a href="whyhello.html">andioop</a>
+    <h1> Welcome to our site!</h1>
   <p>Hello! This is our site that the four of us have developed.</p>
   <br>
   <p>Our developers are Claudia, Adam, Tanisha, and Mathieu</p>
